# ILIS

./: README.md
src/: CMakeLists.txt  bnb_solver.cpp  boxManager.cpp  boxManager.h  debug.cpp  debug.h  formal_solver.cpp  ibex_P_StructNSLyap.cpp  ibex_P_StructNSLyap.h  utilities.cpp  utilities.h
systems/: simple_nonsmooth_energy.txt  simple_perturbed_system.txt
